--- a/claim-service/src/main/resources/application-docker.yml
+++ b/claim-service/src/main/resources/application-docker.yml
@@ -15,7 +15,7 @@ spring:
     show-sql: false
     properties:
       hibernate:
-        format_sql: true
+        format_sql: false
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
 temporal:
@@ -36,4 +36,6 @@ logging:
   level:
     com.ycompany: INFO
     org.springframework.web: INFO
+    org.hibernate.SQL: WARN
+    org.hibernate.type.descriptor.sql.BasicBinder: WARN
 
