--- a/api-gateway/src/main/resources/application-docker.yml
+++ b/api-gateway/src/main/resources/application-docker.yml
@@ -8,13 +8,19 @@ spring:
     gateway:
       routes:
         - id: claim-service
-          uri: http://claim-service:8081
+          uri: http://host.docker.internal:8081
           predicates:
             - Path=/api/claims/**
           filters:
             - StripPrefix=1
+        - id: policy-service
+          uri: http://host.docker.internal:8081
+          predicates:
+            - Path=/api/policies/**
+          filters:
+            - StripPrefix=1
         - id: workflow-manager-service
-          uri: http://workflow-manager-service:8082
+          uri: http://host.docker.internal:8082
           predicates:
             - Path=/api/workflow/**
           filters:
