--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   temporal:
@@ -41,6 +40,17 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
       - ./docker-init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
+    networks:
+      - ycompany-network
+
+  claim-ui:
+    build:
+      context: ./claim-ui
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    environment:
+      - REACT_APP_API_URL=http://localhost:8080
     networks:
       - ycompany-network
 
